Issue #2792869 by imshivani, aleanna, andrey.troeglazov: CKeditor close button is not center aligned

--- a/css/ckeditor-adminimal.css
+++ b/css/ckeditor-adminimal.css
@@ -191,7 +191,7 @@ body.adminimal-theme a.cke_dialog_ui_button:active span {
 body.adminimal-theme .cke_ltr .cke_dialog_close_button {
   background: url("images/x-white.png") scroll no-repeat 50% 2px #B73939;
   right: 10px;
-  top: 1px;
+  top: 9px;
   width: 45px;
 }
 
